--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
+	<div id="sidebar"></div>
 	<!--<script data-main="js/app.js" src="js/libs/requirejs/require.js"></script>-->
 	<script  data-main="js/main.js" src="js/libs/requirejs/require-full.js"></script>
 </body>
