--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 	<div id="sidebar"></div>
+    <!-- element #content Upload of login View. I added temporary style, so that  check it and show -->
+    <div id="content" style="width:250px; background-color:grey;"></div>
 	<!--<script data-main="js/app.js" src="js/libs/requirejs/require.js"></script>-->
 	<script  data-main="js/main.js" src="js/libs/requirejs/require-full.js"></script>
 </body>
