I've changed view, so that it appear on #login link and I've removed onClick event from apps/main.js

--- a/public/index3.html
+++ b/public/index3.html
@@ -16,16 +16,12 @@
 		<div id="main-banner" class="header-elements"><span>bawl</span></div>
 		<div id="cry-out-button" class="header-elements"><span>Cry out</span></div>
 		<div id="about-button" class="header-elements"><span>About</span></div>
-		<div id="login-button" class="header-elements" ><span>Login</span></div>		
+		<div id="login-button" class="header-elements" ><span><a href="#login">Login</a></span></div>		
 	</header>
 	<div id="main-container" class="row">
 		<div id="map-canvas"></div>
-		<div id="login-container">
+		<div id="sidebar">
 <!-- Login form were here, but I added it thought backbone view-->
-		</div>	
-		<div id="sign-up-container">
-<!-- I've removed sing form, plese, add it on link from 
-public\js\pages\templates\LoginTemplate.html  #sing-up  -->
 		</div>	
 	</div>
 		<script  data-main="js/main.js" src="js/libs/requirejs/require-full.js"></script>
