--- a/public/index3.html
+++ b/public/index3.html
@@ -18,13 +18,14 @@
 		<div id="cry-out-button" class="header-elements"><span>Cry out</span></div>
 		<div id="about-button" class="header-elements"><span>About</span></div>
 		<div id="logout-button" class="header-elements" ><span><a href="#" id="logout-btn">Logout</a></span></div>
-		<div id="login-button" class="header-elements" ><span><a href="#login">Login</a></span></div>		
+		<div id="login-button" class="header-elements" ><span><a href="#login" id="login">Login</a></span></div>		
 	</header>
 	<div id="main-container" class="row">
 		<div id="map-canvas"></div>
-		<div id="sidebar">
-<!-- Login form were here, but I added it thought backbone view-->
-		</div>	
+		<div id="sb">
+			<div id="sidebarClose"><a href="#" class="glyphicon glyphicon-remove"></a></div>
+			<div id="sidebar"><!-- sidebar --></div>
+		</div>
 	</div>
 		<script  data-main="js/main.js" src="js/libs/requirejs/require-full.js"></script>
 <!-- I am not sure how to add scripts to index file, while we use RequreJS. Let's discuss, how to do this right. I've uploaded them on previous way -->		
@@ -37,5 +38,6 @@
     <script src="js/apps/addValid.js"></script>
 	<!--<script src="../js/apps/social-networks-buttons.js">-->
 	<script src="js/apps/signform.js"></script>
+	<script src="js/apps/sidebar.js"></script>
 </body>
 </html>
