Add libs colorbox for notificatin window Add notification windows. Add notification for SignUpView

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/social-networks.css">
     <link rel="stylesheet" href="css/signform.css">
+    <link rel="stylesheet" href="css/colorbox.css">
     <link rel="stylesheet" href="css/bootstrap/css/bootstrap-theme.min.css">
     <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
