--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>bawl</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">       
+    <title>bawl</title>      
     <link rel="stylesheet" href="css/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/social-networks.css">
@@ -11,6 +10,7 @@
     <link rel="stylesheet" href="css/colorbox.css">
     <link rel="stylesheet" href="css/bootstrap/css/bootstrap-theme.min.css">
     <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css"> 
 
 </head>
 <body>
@@ -18,8 +18,8 @@
        
     </header>
     <div id="main-container" class="row">
-        <div id="map-canvas"></div>
-        <div id="sb">
+        <div id="map-canvas" class="width50"></div>
+        <div id="sb" class="width50">
             <div id="sidebarClose"><a href="#" class="glyphicon glyphicon-remove"></a></div>
             <div id="sidebar"><!-- sidebar --></div>
         </div>
