--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/colorbox.css">
     <link rel="stylesheet" href="css/bootstrap/css/bootstrap-theme.min.css">
     <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css"> 
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href="css/custom.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
