--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/signform.css">
     <link rel="stylesheet" href="css/colorbox.css">
     <link rel="stylesheet" href="css/bootstrap/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/jquery-ui/jquery-ui.min.css">
     <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="css/custom.css" rel="stylesheet" type="text/css">
@@ -32,6 +33,6 @@
     <script src="js/apps/validation.js"></script>
     <script src="js/apps/addValid.js"></script>
     <!--<script src="../js/apps/social-networks-buttons.js">-->
-    <script src="js/apps/signform.js"></script>
+    <script src="js/apps/signform.js"></script>    
 </body>
 </html>
