Added ability to view issue images and to delete them

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
             <div id="sidebar"><!-- sidebar --></div>
         </div>
     </div>
+    <div id="modal" class="modal fade"></div>
      <script  data-main="js/main.js" src="js/libs/requirejs/require-full.js">
      </script>
 <!-- I am not sure how to add scripts to index file, while we use RequreJS. Let's discuss, how to do this right. I've uploaded them on previous way -->     
