--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="css/custom.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/severity-stars.css">
+    <link rel="stylesheet" href="css/issue-edit-template.css">
+    <link rel="stylesheet" href="css/issue-edit-attachments-template.css">
     
 
 </head>
