1)Added clean of search in search Input 2)Added Admin html and view 3)Fixed  responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
        
     </header>
     <div id="main-container" class="row colorbox-class">
-        <div id="map-canvas" class="width50"></div>
+        <div id="map-canvas"></div>
         <div id="sb" class="width50">
             <div id="sidebarClose"><a href="#" class="glyphicon glyphicon-remove"></a></div>
             <div id="sidebar"><!-- sidebar --></div>
